[gd_scene load_steps=5 format=3 uid="uid://bs4lfblbg53pd"]

[ext_resource type="PackedScene" uid="uid://ctjqde01etycg" path="res://scenes/clickable/clickable.tscn" id="1_3q74g"]
[ext_resource type="Script" path="res://scenes/planet-select/planet_select.gd" id="2_7fbaj"]
[ext_resource type="Texture2D" uid="uid://bxtc5illu43wy" path="res://assets/generic/circle-big.png" id="3_agb4c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ug0ig"]
radius = 45.0

[node name="PlanetSelect" instance=ExtResource("1_3q74g")]
script = ExtResource("2_7fbaj")
area_resource = null
spin_speed = 0.25

[node name="Sprite" parent="." index="0"]
texture = ExtResource("3_agb4c")

[node name="CollisionShape" parent="." index="1"]
shape = SubResource("CircleShape2D_ug0ig")

[connection signal="click" from="." to="." method="_on_click"]
[connection signal="hover" from="." to="." method="_on_hover"]
